--- a/src/styles/Topbar.css
+++ b/src/styles/Topbar.css
@@ -256,9 +256,11 @@
   }
   .topbar-playground-h1 {
     font-size: 5rem;
+    margin: 0 0 -1rem 0;
   }
   .topbar-playground-h2 {
     font-size: 2rem;
+    margin: 0;
   }
   .topbar {
     margin: 0;
