--- a/src/styles/Midbar.css
+++ b/src/styles/Midbar.css
@@ -1,47 +1,89 @@
 .midbar {
-    height: 10vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 0;
-    position: relative;
+  height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 0;
+  position: relative;
 }
 
 .midbar1 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    letter-spacing: 1px;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 1px;
+  cursor: pointer;
 }
 .midbar2 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    letter-spacing: 1px;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 1px;
+  cursor: pointer;
 }
 .midbar3 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    letter-spacing: 1px;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 1px;
+  cursor: pointer;
 }
 .midbar4 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    letter-spacing: 1px;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 1px;
+  cursor: pointer;
 }
 .midbar5 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    letter-spacing: 1px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 1px;
 }
 
 .bolder {
-    font-weight: 700;
-  }
+  font-weight: 700;
+}
+
+.midbar1.active {
+  border: 2px solid #121212;
+  border-radius: 4px;
+  background-color: #f5f5f5; background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgb(18, 18, 18, 0.25);
+  backdrop-filter: blur(1px);
+  -webkit-backdrop-filter: blur(1px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);  
+}
+.midbar2.active {
+  border: 2px solid #121212;
+  border-radius: 4px;
+  background-color: #f5f5f5;
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgb(18, 18, 18, 0.25);
+  backdrop-filter: blur(1px);
+  -webkit-backdrop-filter: blur(1px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+.midbar3.active {
+  border: 2px solid #121212;
+  border-radius: 4px;
+  background-color: #f5f5f5; background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgb(18, 18, 18, 0.25);
+  backdrop-filter: blur(1px);
+  -webkit-backdrop-filter: blur(1px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+.midbar4.active {
+  border: 2px solid #121212;
+  border-radius: 4px;
+  background-color: #f5f5f5; background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgb(18, 18, 18, 0.25);
+  backdrop-filter: blur(1px);
+  -webkit-backdrop-filter: blur(1px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
