--- a/src/styles/Botbar.css
+++ b/src/styles/Botbar.css
@@ -457,6 +457,33 @@
   }
 }
 
+/* Scrollbar Track */
+::-webkit-scrollbar {
+  width: 12px; /* width of the scrollbar */
+  overflow-y: scroll; /* always show scrollbar */
+}
+
+/* Scrollbar Handle */
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* color of the scrollbar handle */
+  border-radius: 6px; /* rounded corners */
+}
+
+/* Scrollbar Track when not hovered */
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* color of the scrollbar track */
+}
+
+/* Scrollbar Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* color of the scrollbar handle on hover */
+}
+
+.scrollableContainer {
+  overflow-y: auto;
+  padding-right: 12px;
+}
+
 /* UNIVERSAL STYLING */
 
 @keyframes goingMerry {
