--- a/src/styles/Topbar.css
+++ b/src/styles/Topbar.css
@@ -280,7 +280,19 @@
     margin-top: -1rem;
   }
   .lato {
-    font-size: 2.5rem;
+    font-size: 2rem;
+  }
+  .header2 {
+    margin-top: -0.5rem;
+  }
+  .blue-angel {
+    font-size: 7.5rem;
+  }
+  .works3 {
+    display: none;
+  }
+  .works1 {
+    justify-content: center;
   }
 }
 
