--- a/src/styles/Botbar.css
+++ b/src/styles/Botbar.css
@@ -455,6 +455,10 @@
     overflow-y: scroll !important;
     max-height: 100vh;
   }
+
+  .scrollableContainer {
+    padding-right: 1rem;
+  }
 }
 
 
@@ -486,6 +490,17 @@
     left: 30px;
     bottom: 30px;
   }
+
+  /*  */
+  /*  */
+  /* PLAYGROUND STYLING */
+  /*  */
+  /*  */
+
+  .scrollableContainer {
+    padding: 0;
+    margin-left: 1rem;
+  }
 }
 
 
@@ -516,7 +531,6 @@
 
 .scrollableContainer {
   overflow-y: auto;
-  padding-right: 12px;
 }
 
 /* UNIVERSAL STYLING */
