--- a/src/styles/Topbar.css
+++ b/src/styles/Topbar.css
@@ -339,7 +339,7 @@
     padding-bottom: 2.5rem;
   }
   .about-row {
-    overflow-x: scroll;
+    overflow-x: hidden;
     display: flex;
     flex-direction: row;
   }
