--- a/src/styles/Botbar.css
+++ b/src/styles/Botbar.css
@@ -510,8 +510,8 @@
 
   .practice-col {
     padding: 0;
-    margin: 0 0.5rem;
-    margin-left: 1.5rem;
+    margin: 0;
+    margin-left: 0.5rem;
   }
   .practice {
     font-size: 3rem;
@@ -522,13 +522,23 @@
   }
 
   .about-desc-col {
-    margin-left: 1.5rem;
+    margin-left: 0.5rem;
   }
   #botbar-about > div > div.about-desc-col.col-lg-4 > div.philosophy-card > div:nth-child(1) > h3, #botbar-about > div > div.about-desc-col.col-lg-4 > div.philosophy-card > div:nth-child(3) > h3 {
     font-size: 2.5rem;
   }
   #botbar-about > div > div.about-desc-col.col-lg-4 > div.philosophy-card > div:nth-child(1) > h3 {
-    padding-bottom: 1rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .pup {
+    font-size: 1.75rem;
+  }
+  .pup2 {
+    font-size: 1.75rem;
+  }
+  .shs {
+    font-size: 1rem;
   }
 }
 
