--- a/src/styles/Botbar.css
+++ b/src/styles/Botbar.css
@@ -547,6 +547,11 @@
   .about-slogan-container {
     margin-top: 1rem;
   }
+  .slogan-container {
+    max-width: none;
+    display: inline;
+  }
+  
 }
 
 
