Added project hyperlink

--- a/src/styles/Botbar.css
+++ b/src/styles/Botbar.css
@@ -471,6 +471,12 @@
   .scrollableContainer {
     padding-right: 1rem;
   }
+
+  .external-link {
+    position: absolute;
+    right: 25px;
+    height: 30px;
+  }
 }
 
 
